# lidar-visualizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  \  imgui.ini  pyproject.toml
.github/workflows/: pypi.yml  python.yml
src/lidar_visualizer/: __init__.py  lidar_visualizer.py  new_visualizer.py  visualize_dataset.py  visualizer.py
src/lidar_visualizer/datasets/: __init__.py  generic.py  helipr.py  mcap.py  ouster.py  point_cloud2.py  rosbag.py
src/lidar_visualizer/tools/: visualizer.py
